syntax = "proto3";
package iris.Control;

import "color.proto";

message Window {
  string name = 1;
  bool is_stereo = 2;
  uint32 x = 3;
  uint32 y = 4;
  uint32 width = 5;
  uint32 height = 6;
  uint32 display = 7;
  bool show_system_decoration = 10;
  Color background_color = 11;
  bool show_ui = 12;
}
